--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "mocha": "~1.12.0"
+    "mocha": "~1.12.0",
+    "event-stream": "~3.0.16"
   },
   "dependencies": {
     "debug": "~0.7.2",
