--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "event enrichments module for snowplow analytics",
   "main": "index.js",
+  "repository": "git@github.com:mkatrenik/snowplow-enrich",
   "scripts": {
     "test": "make test"
   },
