--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "event-stream": "~3.0.16",
     "debug": "~0.7.2",
     "lodash": "~1.3.1",
-    "range_check": "0.0.4"
+    "range_check": "0.0.4",
+    "uuid": "~1.4.1",
+    "ua-parser": "~0.3.3"
   }
 }
